# PIFBot

./: .gitignore  .gitmodules  LICENSE  README.md
freecad/: assembly_chasis.FCStd  coxial-4cm.FCStd  coxial-5cm.FCStd  layer1.FCStd  layer2.FCStd  layer3.FCStd  robot_base.FCStd  rplidar-a1.FCStd  step-motor-42mm.FCStd
freecad/dxf/: layer1.dxf  layer2.dxf  layer3.dxf
freecad/model/: robot_base.FCStd  robot_base.dae
freecad/robot_thesis/: model.sdf
kicad/base_control/: base_control.sch
kicad/mainboard/: mainboard-cache.lib  mainboard.sch  mainboard.sch-bak
kicad/mainboard_v1_0/: .~lock.mainboard_v1_0#  fp-info-cache  fp-lib-table  mainboard_v1_0  mainboard_v1_0-cache.lib  mainboard_v1_0.kicad_pcb  mainboard_v1_0.kicad_pcb-bak  mainboard_v1_0.net  mainboard_v1_0.pro  mainboard_v1_0.sch  mainboard_v1_0.sch-bak  mainboard_v1_0.xml  sym-lib-table
kicad/mainboard_v2_0/: mainboard_v2_0.sch-bak
mechanical/: asembly_layer2.FCStd  assembly_robot.FCStd  ball-transfer.FCStd  camera_holder.FCStd  camera_holder_front.FCStd  layer1.FCStd  layer2.FCStd  layer3.FCStd  openSTM32F4_LQFP64.FCStd  robot_base.FCStd  step-motor-42mm-bracket.FCStd  wheel-65mm.FCStd
mechanical/assembly/: robot.fcstd  robot_base.fcstd  robot_base.fcstd1  robot_wheel.fcstd  robot_wheel.fcstd1
mechanical/render/: robot.pov
mechanical/robot_thesis/: model_v1_0.sdf
ros/: .gitignore
ros/devel/: .catkin  _setup_util.py
ros/src/robot/robot_description/: CMakeLists.txt  package.xml
ros/src/robot/robot_description/meshes/dae/: robot_base.dae  robot_lidar.dae
ros/src/robot/robot_description/urdf/: robot_thesis.gazebo.xacro  robot_thesis.urdf.xacro  robot_thesis_v1_0.urdf.xacro
ros/src/robot_ml/robot_dqn/: CMakeLists.txt  package.xml  setup.py
ros/src/robot_ml/robot_dqn/launch/: result_graph.launch  robot_dqn_combination_obstacle.launch  robot_dqn_moving_obstacle.launch  robot_dqn_no_obstacle.launch  robot_dqn_static_obstacle.launch
ros/src/robot_ml/robot_dqn/nodes/: robot_dqn_combination_obstacle  robot_dqn_moving_obstacle  robot_dqn_no_obstacle  robot_dqn_static_obstacle
ros/src/robot_ml/robot_dqn/save_model/: stage_4_10.h5
ros/src/robot_ml/robot_dqn/src/robot_dqn/: respawnGoal.py
ros/src/robot_simulatioins/robot_gazebo/: package.xml
ros/src/robot_simulatioins/robot_gazebo/launch/: robot_gazebo_rviz.launch  robot_world.launch
ros/src/robot_simulatioins/robot_gazebo/models/robot_thesis/meshs/dae/: robot_base.dae
stm32f4/: .cproject  .project  Makefile
stm32f4/Debug/: .gitignore  output.map  stm32f4.elf
stm32f4/examples/: main.cpp  test_imu.cpp  test_motor.cpp
stm32f4/main/: main.cpp  robot_hardware.c  robot_utils.c  stm32f4xx_it.c  utils.c
stm32f4/src/: main.cpp  stm32f4xx_it.cpp
stm32f4/stm-idf/: LICENSE  README.md
stm32f407/: .cproject  .project  LinkerScript.ld  stm32f407 Debug.cfg
stm32f407/inc/: system_timetick.h
stm32f407/ros_lib/: STM32Hardware.h  SerialClass.h  ros.h
stm32f407/src/: main.c  main.cpp  stm32f4xx_it.c  system_stm32f4xx.c  system_timetick.c
stm32f407/startup/: startup_stm32.s
stm32f4_hal/: .cproject  .project  LinkerScript.ld
stm32f4_hal/src/: main.c  stm32f4xx_hal_msp.c
stm32f4_hal_ros/: .cproject  .project
stm32f4_hal_ros/Debug/: .gitignore  (+5 more)
stm32f4_ros/: .cproject  .project  LinkerScript1.ld
(+625 files in other folders)
