<?xml version="1.0"?>
<package format="2">
  <name>robot_dqn</name>
  <version>1.0.0</version>
  <description>
    The robot_dqn package includes applications using reinforcement learning with DQN (Deep Q-Learning).
  </description>
  <maintainer email="phong@todo.todo">phong</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
